# Smart-Health-Monitoring-and-Alert-System

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
algorithm/: anomaly_detector_interface.py  range_based_anomaly_detector.py  user_baseline_anomaly_detector.py
backend/: data_models.py  health_parameters.py  mqtt_backend.py  trend_analyzer.py
backend/trend_prompts/: trend_analysis_en.md
mqtt_broker/: mosquitto.conf
public/: index.html
simulator/: mqtt_simulator.py
src/: App.js  index.js  setupWebpack.js
src/api/: api.js  mqtt.js
src/components/: Alerts.js  Dashboard.js  Settings.js  Trends.js
